// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expenses Summary page for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 3 expenses totalling $1,234,545.00
  </h1>
</div>
`;

exports[`should render Expenses Summary page for single expense 1`] = `
<div>
  <h1>
    Viewing 1 expense totalling $12,345.00
  </h1>
</div>
`;
